fix: update menu header on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -15,7 +15,11 @@
       padding-left: 1rem;
       padding-right: 1rem;
     }
-
+    @media screen and (min-width: 992px) {
+      .mobile-menu-buttons {
+        display: none;
+      }
+    }
     .navbar-nav {
       width: 510px;
       @media screen and (min-width: 992px) {
@@ -441,11 +445,19 @@
         display: inline-block;
       }
     }
+    @media screen and (max-width: 991px) {
+      max-width: 100%;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
   .navbar {
     padding: 0;
     .navbar-nav {
       .nav-item {
+        .back-link {
+          display: none;
+        }
         &:not(:last-child) {
           margin-right: 40px;
         }
@@ -454,7 +466,22 @@
           border: none;
           box-shadow: 0px 4px 6px -2px #10182808;
           box-shadow: 0px 12px 16px -4px #10182814;
-
+          .dropdown-menu-col {
+            @media screen and (max-width: 991px) {
+              margin-bottom: 10px;
+              display: flex;
+              flex-direction: column;
+            }
+          }
+          &-inner {
+            display: flex;
+            @media screen and (max-width: 991px) {
+              flex-direction: column;
+              overflow: auto;
+              height: 100%;
+              padding-bottom: 40px;
+            }
+          }
           .dropdown-header {
             font-size: 12px;
             text-transform: uppercase;
@@ -462,6 +489,10 @@
             font-weight: 400;
             padding: 8px 16px;
             line-height: 20px;
+            @media screen and (max-width: 991px) {
+              padding-left: 20px;
+              padding-right: 20px;
+            }
             &.pt-2rem {
               padding-top: 1.7rem !important;
             }
@@ -474,7 +505,7 @@
             font-size: 16px;
             font-weight: 400;
             padding: 0 16px;
-            margin: 4px 0;
+            margin: 8px 0;
             line-height: 24px;
             color: #31364e;
             & + .dropdown-item {
@@ -489,7 +520,7 @@
             }
             @media screen and (max-width: 991px) {
               color: #595858;
-              padding: 0.25rem 1.5rem;
+              padding: 0 20px;
             }
             &.pt25 {
               padding-top: 25px;
@@ -503,13 +534,13 @@
           &:hover {
             .dropdown-menu {
               display: flex !important;
+
               .dropdown-menu-col {
                 min-width: 251px;
                 padding: 0;
               }
               .dropdown-item {
                 white-space: normal;
-
                 & + .dropdown-item {
                   margin-top: 8px;
                 }
@@ -521,8 +552,7 @@
                   color: #3d8be8;
                 }
               }
-
-              top: 57px;
+              top: 64px;
               padding-top: 20px;
               padding-bottom: 12px;
               padding-left: 8px;
@@ -563,7 +593,7 @@
     .navbar-toggler-header {
       border: none;
       background: transparent !important;
-
+      z-index: 1;
       &:hover {
         background: transparent !important;
       }
@@ -575,11 +605,11 @@
         width: 25px;
         transition: all 0.2s;
         display: block;
-        height: 3px;
+        height: 2px;
         border-radius: 3px;
-        background-color: #b3b3b3;
+        background-color: #000;
         & + .icon-bar {
-          margin-top: 4px;
+          margin-top: 5px;
         }
       }
       &[aria-expanded='true'] {
@@ -614,40 +644,82 @@
     .navbar {
       order: 3;
       .navbar-nav {
-        padding: 5px 20px;
-        box-shadow: 0 2px 2px rgb(174 174 174 / 30%);
+        padding: 38px 20px;
+        width: 100% !important;
+        max-height: calc(100vh - 180px);
+        overflow: auto;
         .nav-item {
           &:not(:last-child) {
             margin-right: 0;
-            border-bottom: #dcdcdc 2px solid;
+            margin-bottom: 24px;
           }
           .dropdown-menu {
             border-radius: 0;
             border: none;
             box-shadow: none;
+            position: fixed;
+            padding-top: 67px;
+            z-index: 1;
+            top: 0;
+            left: 100%;
+            width: 100%;
+            height: 100vh;
+            transition: all 0.3s ease-in-out;
+            display: block;
+            &.show {
+              left: 0;
+              .back-link {
+                left: 20px;
+              }
+            }
             .dropdown-item {
-              color: #646464;
+              color: #31364e;
               font-size: 16px;
               & + .dropdown-item {
-                margin-top: 8px;
+                margin-top: 4px;
               }
             }
           }
+          .back-link {
+            display: block;
+            position: fixed;
+            top: 20px;
+            left: 100%;
+            z-index: 1;
+            border: none;
+            padding: 0;
+            background-color: transparent;
+          }
           .nav-link {
-            padding: 14px 0px;
-            line-height: 24px;
+            padding: 0px !important;
+            line-height: 28px;
+            font-size: 20px !important;
+            font-weight: 400;
           }
           .dropdown-toggle {
             &:after {
-              margin-left: auto;
-              content: '+';
-              border: none;
-              color: black;
-              transform: translateY(0px);
-              margin-top: 0;
-              transform: all ease 0.5ms;
+              display: none;
             }
           }
+        }
+      }
+      .mobile-menu-buttons {
+        margin-top: auto;
+        bottom: 0;
+        position: absolute;
+        padding: 0 20px 52px;
+        width: 100%;
+        .login-btn {
+          border: #31364e 1px solid;
+          border-radius: 40px;
+          height: 40px !important;
+          color: #31364e;
+          font-size: 15px;
+          font-weight: 500;
+          line-height: 20px;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
         }
       }
       .header__container {
@@ -659,6 +731,16 @@
         left: 0px;
         top: 4rem;
         background-color: #ffffff;
+        &.show {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+        }
+        @media screen and (max-width: 991px) {
+          height: calc(100vh - 67px) !important;
+          overflow: auto;
+        }
       }
     }
   }
@@ -713,6 +795,7 @@
       order: 1;
       margin: unset;
       padding: 0;
+      display: none;
     }
   }
   .resourceNav {
